--- a/app/src/main/res/layout/activity_deilta.xml
+++ b/app/src/main/res/layout/activity_deilta.xml
@@ -241,6 +241,29 @@
                     android:text="Nhỏ"
                     android:textColor="#3A3A3A" />
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Kích cỡ"
+                    android:textColor="#3A3A3A" />
+
+                <TextView
+                    android:id="@+id/dt_tx_quequan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Việt Nam"
+                    android:textColor="#3A3A3A" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
