--- a/app/src/main/res/layout/fragment_cart_product.xml
+++ b/app/src/main/res/layout/fragment_cart_product.xml
@@ -5,10 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".Fragment.CartProduct">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/bestView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:clipToPadding="false"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp" />
 
 </FrameLayout>
