--- a/app/src/main/res/layout/iteam_sanpham.xml
+++ b/app/src/main/res/layout/iteam_sanpham.xml
@@ -16,6 +16,7 @@
             android:layout_width="180dp"
             android:layout_height="180dp"
             android:layout_gravity="center"
+            android:scaleType="fitXY"
             android:background="@drawable/cay" />
 
         <TextView
@@ -47,11 +48,21 @@
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/tvpkgia"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:text="490.000 "
+            android:textColor="#007537"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:text="490.000 đ"
-                android:textColor="#007537"
+                android:text="VNĐ"
+                android:textColor="#FCFF0000"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:textSize="15sp"
@@ -60,7 +71,7 @@
                 android:id="@+id/it_favorite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-android:background="@drawable/oval_background1"
+                android:background="@drawable/oval_background1"
                 android:layout_weight="1"
                 android:src="@drawable/heart"
                 />
