--- a/app/src/main/res/layout/viewholder_category.xml
+++ b/app/src/main/res/layout/viewholder_category.xml
@@ -19,23 +19,27 @@
 
         <ImageView
             android:id="@+id/imageView5"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/khung_tron"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/suongrong" />
+            app:srcCompat="@drawable/suongrong"
+            android:scaleType="centerCrop"
+            android:clipToOutline="true" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/txtloai"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textColor="#000"
         android:textSize="12sp"
+        android:fontFamily="@font/font1"
         android:layout_marginTop="8sp"
         app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
         app:layout_constraintStart_toStartOf="@+id/constraintLayout"
