--- a/app/src/main/res/layout/activity_deilta.xml
+++ b/app/src/main/res/layout/activity_deilta.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginHorizontal="7dp"
     tools:context=".Activity.DeiltaActivity">
 
     <ScrollView
@@ -25,17 +26,20 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:background="#ccc"
+                    android:layout_height="match_parent"
+                    android:paddingHorizontal="10dp"
+                    android:background="#FFFFFF"
 
-                    android:layout_height="match_parent">
+                    tools:layout_editor_absoluteX="0dp"
+                    tools:layout_editor_absoluteY="0dp">
 
-                    <ImageButton
+                    <ImageView
                         android:id="@+id/dt_imb_favorite"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/oval_background"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
+                        android:background="#fff"
                         app:srcCompat="@drawable/favorite" />
 
                     <TextView
@@ -48,8 +52,10 @@
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/dt_imb_favorite"
+                        app:layout_constraintHorizontal_bias="0.648"
                         app:layout_constraintStart_toEndOf="@+id/dt_imb_back"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.75" />
 
                     <ImageButton
                         android:id="@+id/dt_imb_back"
@@ -74,6 +80,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="350dp"
                     android:scaleType="centerCrop"
+                    android:background="#8D8B8B"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:srcCompat="@drawable/top_grey_background" />
@@ -82,10 +89,12 @@
                     android:id="@+id/dt_img_product"
                     android:layout_width="285dp"
                     android:layout_height="284dp"
-                    android:scaleType="centerCrop"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+                    android:scaleType="center"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/imageView6"
+                    app:layout_constraintHorizontal_bias="0.504"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/caycoi" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -100,6 +109,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/text_bg_shape"
                     android:fontFamily="@font/font1"
+                    android:layout_marginTop="5dp"
                     android:text="Ưa bóng"
 
                     android:textColor="#fff"
@@ -254,7 +264,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Kích cỡ"
+                    android:text="Xuất xứ"
                     android:textColor="#3A3A3A" />
 
                 <TextView
