--- a/app/src/main/res/layout/activity_deilta.xml
+++ b/app/src/main/res/layout/activity_deilta.xml
@@ -80,17 +80,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="350dp"
                     android:scaleType="centerCrop"
-                    android:background="#8D8B8B"
+                    android:background="#FFFFFF"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:srcCompat="@drawable/top_grey_background" />
 
                 <ImageView
                     android:id="@+id/dt_img_product"
-                    android:layout_width="285dp"
-                    android:layout_height="284dp"
-                    android:scaleType="center"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_width="393dp"
+                    android:layout_height="338dp"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                     app:layout_constraintEnd_toEndOf="@+id/imageView6"
                     app:layout_constraintHorizontal_bias="0.504"
                     app:layout_constraintStart_toStartOf="parent"
